--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,23 @@
 project (nes)
 
-add_subdirectory(3rd)
+
+include(FetchContent)
+
+
+FetchContent_Declare(
+  SDL3
+  GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
+  GIT_TAG release-3.2.14
+)
+FetchContent_MakeAvailable(SDL3)
+
 
 add_executable(nes 
     mapper.c
     rom.c
-    nes.c
+    main.c
 )
 add_definitions(-g)
 set(CMAKE_BUILD_TYPE Debug)
 
-target_link_libraries(nes SDL3_Headers SDL3-shared)
+target_link_libraries(nes PRIVATE SDL3::SDL3 )
